Creating a branch on the sampling chapter

--- a/new_pages/sampling.rmd
+++ b/new_pages/sampling.rmd
@@ -459,5 +459,5 @@ Obtaining the information to build a sampling frame can be time consuming in res
 Sampling frames do not need to be a simple list (paper or otherwise). Other recent data could be really powerful to create a sampling frame in a setting where there are a lot of IDPs, or a natural disaster has substantially modified population distribution, or simply because you cannot find traditional data sources reliable enough. GIS sampling has been used more frequently in recent years to draw samples in complex settings. Although it can look more complex, in many ways it is often a straigthforward application of SRS but using satelite images, or a map, or another GIS product as a sampling frame.
 
 ```{r "spatial sampling", echo=TRUE}
-
+# Need to simplify code discussed with Pat
 ```
