Add tag to R basics (Ch. 3)

--- a/new_pages/basics.Rmd
+++ b/new_pages/basics.Rmd
@@ -1,4 +1,4 @@
-# R Basics
+# R Basics {#rbasics}
 
 ```{r out.width = "100%", fig.align = "center", echo=F}
 knitr::include_graphics(here::here("images", "basics_header_close.png"))
