Add tag to Cleaning data and core functions (Ch. 8)

--- a/new_pages/cleaning.Rmd
+++ b/new_pages/cleaning.Rmd
@@ -1,4 +1,4 @@
-# Cleaning data and core functions {}
+# Cleaning data and core functions {#cleaning_data}
 
 
 ```{r, out.height = "10%", fig.align = "center", echo=F}
