Fix a typo in function name
I am pretty sure that the author was listing the str_to_lower instead of repeating the str_to_upper function

--- a/new_pages/joining_matching.Rmd
+++ b/new_pages/joining_matching.Rmd
@@ -170,7 +170,7 @@ unique(hosp_info$hosp_name)
 Prior to a join, it is often easiest to convert a column to all lowercase or all uppercase. If you need to convert all values in a column to UPPER or lower case, use `mutate()` and wrap the column with one of these functions from **stringr**, as shown in the page on [Characters and strings].  
 
 `str_to_upper()`  
-`str_to_upper()`  
+`str_to_lower()`  
 `str_to_title()`  
 
 
